# ChangeLog for dev-perl/String-Approx
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/String-Approx/ChangeLog,v 1.3 2006/12/12 13:03:47 gustavoz Exp $

  12 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  String-Approx-3.26.ebuild:
  Keyworded ~sparc

  08 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  String-Approx-3.26.ebuild:
  Added ~x86.

*String-Approx-3.26 (19 Nov 2006)

  19 Nov 2006; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +String-Approx-3.26.ebuild:
  Bug 154392, dep for fuzzocr, ebuild from tomk
