@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/String-Approx
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/String-Approx/ChangeLog,v 1.3 2006/12/12 13:03:47 gustavoz Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/String-Approx/ChangeLog,v 1.4 2007/01/08 16:37:04 mcummings Exp $
+
+  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
+  String-Approx-3.26.ebuild:
+  marking amd64 stable
 
   12 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   String-Approx-3.26.ebuild:
